# python-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  docker-compose-dev.yml  docker-compose-prod.yml  env_  main.py  pyproject.toml  start.sh
alembic/: env.py
alembic/versions/: 618fe20d1b88_create_inital_schema.py
app/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
app/routers/: auth.py  post.py  user.py  vote.py
notes/: 02-fastapi-basics.md  03-pydantic-schema-validation.md  04-crud-operations.md  06-sql-queries.md  09-orm-intro.md  11-users-table.md  12-routers.md
notes/advanced/: 26-cors.md  27-deploy-api-render.md  28-docker-development.md  29-docker-compose.md  30-docker-deployment.md
notes/basic/: 01-introduction-and-course-overview.md  02-fastapi-basics.md  04-crud-operations.md  05-databases-intro.md  07-databases-in-python.md  08-database-crud.md
test-codes/: fastapi-test-queries.sql  psycopg-test.py  test.py
